--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,13 @@
 version: 2
 jobs:
   build:
+    machine: true
     steps:
     
       - checkout
       
       - setup_remote_docker
+          docker_layer_caching: true
       
       - run:
           name: Install Docker client
