--- a/problems/hello_world/common_lisp/Dockerfile
+++ b/problems/hello_world/common_lisp/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos
+FROM fedora
 RUN yum update -y &&    yum install -y sbcl
 ADD solution.clisp /solution.clisp
 CMD ["bash", "-c", "sbcl --load /solution.clisp | tail -n +8"]
